--- a/finmen-backend/package.json
+++ b/finmen-backend/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^15.0.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "firebase": "^11.9.1",
+    "google-auth-library": "^10.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1"
   },
