--- a/finmen-frontend/package.json
+++ b/finmen-frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^15.0.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
@@ -25,7 +27,9 @@
     "react-native-animatable": "^1.4.0",
     "react-native-firebase": "^5.6.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "~4.11.1",
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
