--- a/finmen-frontend/package.json
+++ b/finmen-frontend/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.4.0",
@@ -16,23 +18,25 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "axios": "^1.10.0",
-    "expo": "~53.0.13",
+    "expo": "53.0.0",
+    "expo-auth-session": "~6.2.1",
+    "expo-crypto": "~14.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
-    "firebase": "^11.9.1",
+    "expo-updates": "~0.28.17",
     "nativewind": "^4.1.23",
-    "react": "^19.0.0",
-    "react-native": "^0.79.4",
+    "react": "18.3.1",
+    "react-native": "0.79.5",
     "react-native-animatable": "^1.4.0",
-    "react-native-firebase": "^5.6.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-auth-session": "~6.2.1",
-    "expo-crypto": "~14.1.5"
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.0",
     "@eslint/js": "^9.30.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
